config/guiadmin.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: guiadmin
spec:
  selector:
    matchLabels:
      app: guiadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: guiadmin
    spec:
      containers:
      - name: guiadmin
        image: nexus.chattigo.com:49443/guiadmin:<SUNOMBRE>
        imagePullPolicy: Always
        ports:
        - containerPort: 80        
      imagePullSecrets:
      - name: nexus
---
kind: Service
apiVersion: v1
metadata:
  name: guiadmin-cip
spec:
  selector:
    app: guiadmin
  type: ClusterIP
  ports:
  - name:  https
    port:  443
    targetPort: 80
